修复封面显示

--- a/启动脚本说明.md
+++ b/启动脚本说明.md
@@ -68,10 +68,10 @@
    - 作用: 异步任务处理 (视频处理、文件上传等)
    - 配置: 单进程模式，适合开发环境
 
-4. **前端开发服务器** (端口: 5173)
+4. **前端开发服务器** (端口: 3000)
    - 技术栈: React + TypeScript + Vite
    - 功能: 用户界面、状态管理(Zustand)、实时通信
-   - 地址: http://localhost:5173
+   - 地址: http://localhost:3000
 
 ### 集成功能
 - **WebSocket实时通信**: 任务进度推送、状态更新
@@ -158,11 +158,20 @@ tail -f backend.log
 
 ## ⚠️ 常见问题
 
-### 1. 端口被占用
+### 1. Celery模块找不到错误
+```
+ModuleNotFoundError: No module named 'backend'
+```
+**解决方案**: 
+- 确保在项目根目录运行脚本
+- 脚本已自动设置 `PYTHONPATH=.:$PYTHONPATH`
+- 使用 `celery -A backend.core.celery_app` 而不是 `celery -A core.celery_app`
+
+### 2. 端口被占用
 ```bash
 # 查找占用端口的进程
 lsof -i :8000  # 后端端口
-lsof -i :5173  # 前端端口
+lsof -i :3000  # 前端端口
 lsof -i :6379  # Redis端口
 
 # 停止占用进程
@@ -196,7 +205,7 @@ npm install
 ## 🎯 下一步
 
 1. **API密钥配置**: 编辑`.env`文件，设置必要的API密钥
-2. **测试功能**: 访问 http://localhost:5173 开始使用
+2. **测试功能**: 访问 http://localhost:3000 开始使用
 3. **开发调试**: 使用 `./stop_autoclip.sh` 和 `./quick_start.sh` 进行快速开发迭代
 
 ## 🆘 技术支持
